--- a/application/static/manifest.json
+++ b/application/static/manifest.json
@@ -15,7 +15,7 @@
       "sizes": "128x128"
     },
     {
-      "src": "metarhia.png",
+      "src": "image/logo.png",
       "type": "image/png",
       "sizes": "256x256"
     }
